# AscenderFramework

./: .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION_UPDATES.md  LICENSE  README.md  SECURITY.md  ascender-framework.skill  ascender.json  bootstrap.py  cli.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  settings.py  start.py  test_cli_engine.py  test_run_commands.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml  refactor.yml
.github/workflows/: deploy-mkdocs.yml  deploydocs.yml
api-reference/: index.html
api-reference/application/: index.html
api-reference/cli/: index.html
api-reference/controllers/: index.html
api-reference/database/: index.html
api-reference/di/: index.html
api-reference/http/: index.html
api-reference/microservices/: index.html
api-reference/modules/: index.html
api-reference/testing/: index.html
api-reference/types/: index.html
api-reference/validation/: index.html
ascender/: __init__.py  start.py
ascender/abc/: __init__.py  middleware.py
ascender/abstracts/: __init__.py  factory.py  middleware.py  module.py
ascender/clis/: cli_module.py
ascender/common/: __init__.py  api_docs.py  inject.py  injectable.py  injectfn.py  module.py  repository.py  serializer.py
ascender/contrib/: __init__.py  middlewares.py  repositories.py  services.py
ascender/core/: __init__.py  application.py  loader.py  repositories.py  services.py  sockets.py  types.py
ascender/guards/: __init__.py  guard.old.py  guard.py  paramguard.py  use_guards.py
ascender/testing/: __init__.py  lifecycle.py  mixer.py  mock_dependency.py  test_client.py
ascender/workspaces/: provider.py  workspace.py
assets/javascripts/: home.js
assets/stylesheets/: custom.css
cli-engine-complete-structure/: index.html
cli-engine-structure/: index.html
cli/command-types/: index.html
cli/creating-commands/: index.html
cli/examples/: index.html
cli/overview/: index.html
cli/registration/: index.html
clis/: migrate_cli.py
clis/controller_cli/: cli_processor.py  constants.py  controller_creator.py  repository_creator.py
controllers/: controllers_module.py  main_controller.py
controllers/app/: app_controller.py  app_module.py  app_repository.py  app_service.py  endpoints.py  repository.py  service.py
controllers/auth/: .ignore  endpoints.py  models.py  repository.py  service.py
controllers/controller-hooks/: index.html
controllers/controller-routes/: index.html
controllers/controller-types/: index.html
controllers/overview/: index.html
controllers/projects/: endpoints.py  models.py  repository.py  serializers.py  service.py
controllers/thematics/: endpoints.py  models.py  repository.py  serializers.py  service.py
controllers/users/: endpoints.py  models.py  service.py
core/: application.py  database.py  loader.py  sockets.py  types.py  update.txt
core/_builder/: manager.py
core/cli/: .env.example  __init__.py  application.py  async_module.py  injectable.py  main.py  models.py  processor.py
core/cli_apps/: migrate_cli.py  serve_cli.py  users_cli.py
core/database/: constructor.py  dbcontext.py  engine.py
core/errors/: authentication.py  base.py
core/extensions/: repositories.py  serializer.py  services.py
core/guards/: authenticator.py  guard.py
core/hooks/: auth.py  loader.py  store.py
core/identity/: engine.py  handler.py  manager.py  policy.py  security.py  singleton.py
core/modules/: _base.py  _modules.py
core/optionals/: __init__.py
core/plugins/: injector.py  logger.py  plugin.py  plugin_injector.py  plugin_loader.py
core/store/: distributor.py  storage.py
core/utils/: authenticator.py  cacher.py  controller.py  sockets.py
di/dependency-providers/: index.html
docs/: .pages  README.md  cli-engine-complete-structure.md  cli-engine-structure.md  index.md
entities/: dialogue.py  projects.py  test.py  user.py  users.py
examples/: cli_commands.py
overrides/: home.html  index.html  main.html
search/: search_index.json
src/: _build.py  app_module.py  bootstrap.py  main.py  routes.py  settings.py
(+418 files in other folders)
