[tool.poetry]
name = "ascender-framework"
version = "1.2.1"
description = "The Ascender Framework is a sophisticated and structured FastAPI-based framework, inspired by the principles of NestJS. It stands out for its modular and organized architecture, offering developers a streamlined and efficient way to build web applications"
authors = ["AscenderTeam"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
tortoise-orm = "^0.20.0"
python-dotenv = "^1.0.0"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
rich = "^13.6.0"
readchar = "^4.0.5"
aerich = "^0.7.2"
bcrypt = "^4.0.1"
click = "^8.1.7"
rich-click = "^1.7.2"
python-socketio = "^5.10.0"
fastapi-socketio = "^0.0.10"
requests = "^2.31.0"
pyjwt = "^2.8.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
pydantic = {extras = ["email"], version = "^2.7.4"}
inflection = "^0.5.1"
chardet = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
