[tool.poetry]
name = "ascender-framework"
version = "2.0.4"
description = "The Ascender Framework is a sophisticated and structured FastAPI-based framework, inspired by the principles of NestJS. It stands out for its modular and organized architecture, offering developers a streamlined and efficient way to build web applications"
authors = ["AscenderTeam"]
readme = "README.md"
packages = [
    { include = "ascender" },
]
include = ["logo.png"]
repository = "https://github.com/ascenderteam/ascenderframework"
homepage = "https://ascender-framework.com"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = ">=0.115"
python-dotenv = "^1.0.0"
uvicorn = ">=0.25"
rich = "^13.6.0"
readchar = "^4.0.5"
aerich = "^0.7.2"
click = "^8.1.7"
rich-click = "^1.7.2"
requests = ">=2.31.0"
sqlalchemy = {version = ">=2.0.31", extras = ["asyncio"]}
pydantic = {version = ">=2.7.4", extras = ["email"]}
inflection = "^0.5.1"
chardet = "^5.2.0"
jinja2 = "^3.1.4"
python-minifier = "^2.11.3"
pyinstaller = "^6.11.1"
httpx = "^0.28.1"
reactivex = ">=4.0.4"
watchfiles = "^1.0.5"
mkdocs-awesome-pages-plugin = "^2.10.1"
rich-argparse = "^1.7.1"
pytest = "^8.4.2"

[tool.poetry.scripts]
ascender = "ascender.start:_builtin_launcher"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.49"
aiokafka = "^0.12.0"
redis = "^5.2.1"
codetiming = "^1.4.0"
faker = "^37.11.0"
pytest = "^8.4.2"
mkdocstrings = "^0.30.1"
mkdocstrings-python = "^1.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
